--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -11,7 +11,7 @@
   <name>MyBerkeley executable</name>
   <version>0.10-SNAPSHOT</version>
   <properties>
-    <nakamura.version>0.10-SNAPSHOT</nakamura.version>
+    <nakamura.version>0.10-20110426</nakamura.version>
   </properties>
   <packaging>jar</packaging>
   <build>
@@ -35,7 +35,7 @@
 			<bundle>
 			  <groupId>org.sakaiproject.nakamura</groupId>
 			  <artifactId>org.sakaiproject.nakamura.mysqljdbc</artifactId>
-			  <version>0.10-SNAPSHOT</version>
+			  <version>0.10-20110426</version>
 			</bundle>            
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
@@ -58,7 +58,7 @@
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
-              <version>0.6.0-SNAPSHOT</version>
+              <version>0.6</version>
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
