--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -42,12 +42,12 @@
     <dependency>
 	    <groupId>org.sakaiproject.nakamura</groupId>
 	    <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-	    <version>0.10-SNAPSHOT</version>
+	    <version>0.10-20110426</version>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
-      <artifactId>org.sakaiproject.nakamura.solr</artifactId>
-      <version>0.10-SNAPSHOT</version>
+      <artifactId>org.sakaiproject.nakamura.solr-myberkeley</artifactId>
+      <version>0.10-20110426</version>
       <scope>provided</scope>
     </dependency>
 
