--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -66,14 +66,14 @@
                   <directory>${sakai3.home}/sling</directory>
 		          <includes>
 		            <include>org.apache.sling.launchpad.base.jar</include>
-		          </includes>                  
-                </fileset>                             
+		          </includes>
+                </fileset>
               </filesets>
             </configuration>
           </plugin>
         </plugins>
       </build>
-    </profile>    
+    </profile>
   <profile>
     <id>loaddata-sling</id>
     <activation>
@@ -90,7 +90,7 @@
 	        <executions>
 	          <execution>
 	            <id>load-users</id>
-	            <phase>integration-test</phase>          
+	            <phase>integration-test</phase>
 	            <goals>
 	              <goal>exec</goal>
 	            </goals>
@@ -100,20 +100,95 @@
 	          <executable>ruby</executable>
 	          <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
 	          <arguments>
-	            <argument>-w</argument>
-	            <argument>${project.build.scriptSourceDirectory}/sling_data_loader.rb</argument>
+	            <argument>${project.build.scriptSourceDirectory}/ucb_data_loader.rb</argument>
 	            <argument>${loaddata.server}</argument>
 	            <argument>${loaddata.password}</argument>
-	            <argument>${loaddata.numusers}</argument>
 	          </arguments>
 	        </configuration>
 	      </plugin>
       </plugins>
     </build>
-  </profile>      
+  </profile>
+  <profile>
+    <id>loaddata-vanilla</id>
+    <activation>
+      <property>
+        <name>sling.loadvanilla</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.1</version>
+          <executions>
+            <execution>
+              <id>load-vanillausers</id>
+              <phase>integration-test</phase>
+              <goals>
+                <goal>exec</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <executable>ruby</executable>
+            <workingDirectory>${project.build.directory}/nakamura-testscripts/testscripts/SlingRuby/dataload</workingDirectory>
+            <arguments>
+              <argument>sling_data_loader.rb</argument>
+              <argument>--server</argument>
+              <argument>${loaddata.server}</argument>
+              <argument>--adminpwd</argument>
+              <argument>${loaddata.password}</argument>
+              <argument>--userids</argument>
+              <argument>${project.build.scriptSourceDirectory}/20k-random-userids.csv</argument>
+              <argument>--load-content-files</argument>
+              <argument>0</argument>
+            </arguments>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
  </profiles>
   <build>
     <plugins>
+      <!-- TODO This would go a lot faster if a JAR somewhere held the required resources... -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.5</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.scm</groupId>
+            <artifactId>maven-scm-provider-gitexe</artifactId>
+            <version>1.5</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>export-testscripts</id>
+            <goals>
+              <goal>checkout</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <skipCheckoutIfExists>true</skipCheckoutIfExists>
+              <checkoutDirectory>${project.build.directory}/nakamura-testscripts</checkoutDirectory>
+              <!-- TODO Point this to a safer location once John's fixes have been merged! -->
+              <!--
+              <connectionUrl>scm:git:git://github.com/sakaiproject/nakamura.git</connectionUrl>
+              <scmVersionType>tag</scmVersionType>
+              <scmVersion>0.10-RC2</scmVersion>
+              -->
+              <connectionUrl>scm:git:git://github.com/johnfking2/nakamura.git</connectionUrl>
+              <scmVersionType>branch</scmVersionType>
+              <scmVersion>master</scmVersion>
+              <includes>testscripts/*,testscripts/*/*,testscripts/*/*/*,testscripts/*/*/*/*</includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -140,7 +215,7 @@
                   <sysproperty key="sling.home" value="sling"/>
 				  <sysproperty key="org.sakaiproject.nakamura.core.port" value="${sling.port}"/>
 				  <sysproperty key="org.mortbay.jetty.ajp.port" value="8010"/>
-				  <sysproperty key="java.io.tmpdir" value="${sling.tmpdir}"/>                 
+				  <sysproperty key="java.io.tmpdir" value="${sling.tmpdir}"/>
                   <sysproperty key="myberkeley.home" value="${project.parent.basedir}"/>
                   <sysproperty key="sling.include.nakamura" value="${sling.include.nakamura}"/>
                   <arg value="-p"/>
