--- a/configs/qa/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
+++ b/configs/qa/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
@@ -6,7 +6,7 @@
 # your Sling working/load directory and edit the fully-qualified path below. 
 
 # fully-qualified path of the JS file that specifies the environment
-provider.file=/Users/johnk/dev/src/myberkeley-sakai3/myberkeley/configs/qa/env.qa.js
+provider.file=/home/myberkeley/myberkeley/configs/dev/env.dev.js
 
 # Don't edit below here. 
 provider.roots=/dev/configuration/env.js
