--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -78,18 +78,18 @@
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-          <version>0.10-20110426</version>
+          <version>0.11-SNAPSHOT</version>
       </dependency>
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.core</artifactId>
-          <version>0.10-20110426</version>
+          <version>1.0-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.user</artifactId>
-          <version>0.10-20110426</version>
+          <version>0.11-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
 
@@ -159,7 +159,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>0.10-20110426</version>
+      <version>0.11-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
