--- a/scripts/mysql/nakamura.properties
+++ b/scripts/mysql/nakamura.properties
@@ -1,1 +1,1 @@
-sling.repository.config.file.url=/home/myberkeley/myberkeley/scripts/mysql/repository.xml
+sling.repository.config.file.url=${sling.home}/repository.xml
