MYB-577 Correct path to qa's env file

--- a/configs/qa/load/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
+++ b/configs/qa/load/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
@@ -6,7 +6,7 @@
 # your Sling working/load directory and edit the fully-qualified path below. 
 
 # fully-qualified path of the JS file that specifies the environment
-provider.file=/home/myberkeley/myberkeley/configs/qa/load/env.dev.js
+provider.file=/home/myberkeley/myberkeley/configs/qa/load/env.qa.js
 
 # Don't edit below here. 
 provider.roots=/dev/configuration/env.js
