--- a/configs/qa/sling/config/org/sakaiproject/nakamura/http/usercontent/ServerProtectionServiceImpl.config
+++ b/configs/qa/sling/config/org/sakaiproject/nakamura/http/usercontent/ServerProtectionServiceImpl.config
@@ -1,7 +1,7 @@
 service.bundleLocation="slinginstall:org.sakaiproject.nakamura.http-0.11-SNAPSHOT.jar"
 trusted.hosts=["http://localhost:8080","http://portal-qa.berkeley.edu","http://portal-qa.berkeley.edu:80","http://portal-qa.berkeley.edu:8080","https://portal-qa.berkeley.edu"]
 service.pid="org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl"
-trusted.paths=["/dev","/devwidgets","/system"]
+trusted.paths=["/dev","/devwidgets","/system","/var/defaults"]
 untrusted.contenturl="http://portal-qa.berkeley.edu:8082"
 trusted.postwhitelist=["/system"]
 trusted.exact.paths=["/","/index.html"]
