--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -120,6 +120,12 @@
       <version>4.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+       <groupId>org.apache.sling</groupId>
+       <artifactId>org.apache.sling.commons.testing</artifactId>
+       <version>2.0.5-20100823</version>
+       <scope>test</scope>
+    </dependency>
 
   </dependencies>
 </project>
