--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -118,8 +118,13 @@
       <version>2.0.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>org.apache.sling.commons.osgi</artifactId>
+          <version>2.0.6</version>
+    </dependency>
 
-    <!-- jcr -->
+      <!-- jcr -->
     <dependency>
       <groupId>javax.jcr</groupId>
       <artifactId>jcr</artifactId>
