--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -121,7 +121,7 @@
     <dependency>
           <groupId>org.apache.sling</groupId>
           <artifactId>org.apache.sling.commons.osgi</artifactId>
-          <version>2.0.7-20110526.130635-499</version>
+          <version>2.0.6</version>
     </dependency>
 
       <!-- jcr -->
