NOJIRA After KERN-1927 We need to explicitly start the mysql bundle in startlevel 1

--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -43,6 +43,7 @@
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.mysqljdbc</artifactId>
               <version>${nakamura.version}</version>
+              <startLevel>1</startLevel>
             </bundle>
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
