--- a/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
+++ b/configs/dev/load/org.sakaiproject.nakamura.http.usercontent.ServerProtectionServiceImpl.config
@@ -2,3 +2,4 @@ trusted.hosts=["http://localhost:8080","http://portal-dev.berkeley.edu","http://
 trusted.paths=["/dev","/devwidgets","/system","/var/defaults"]
 trusted.postwhitelist=["/system"]
 trusted.referer=["/","http://localhost:8080","http://portal-dev.berkeley.edu","http://portal-dev.berkeley.edu:80","http://portal-dev.berkeley.edu:8080","https://portal-dev.berkeley.edu"]
+untrusted.contenturl="http://portal-dev.berkeley.edu:8082"
