--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>edu.berkeley.myberkeley.base</artifactId>
   <packaging>pom</packaging>
   <version>0.10-SNAPSHOT</version>
-    <name>MyBerkeley</name>
+  <name>MyBerkeley</name>
   <url>http://ets.berkeley.edu/</url>
   <issueManagement>
     <system>jira</system>
@@ -183,10 +183,8 @@
         </configuration>
       </plugin>
       <plugin>
-        <inherited>true</inherited>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.5</version>
         <configuration>
           <updateReleaseInfo>true</updateReleaseInfo>
         </configuration>
@@ -197,7 +195,8 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-scr-plugin</artifactId>
-          <version>1.4.0</version>
+          <version>1.7.0</version>
+          <inherited>true</inherited>
           <executions>
             <execution>
               <id>generate-scr-scrdescriptor</id>
@@ -210,7 +209,7 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.0.1</version>
+          <version>2.3.4</version>
           <inherited>true</inherited>
           <configuration>
             <instructions>
@@ -236,13 +235,17 @@
   </build>
   <dependencyManagement>
     <dependencies>
-<!-- Web Application API -->
+      <dependency>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>org.apache.felix.scr.annotations</artifactId>
+        <version>1.5.0</version>
+      </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
         <version>2.4</version>
         <scope>provided</scope>
-      </dependency>    
+      </dependency>
     </dependencies>
     </dependencyManagement>
   <distributionManagement>
