--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -76,6 +76,12 @@
               <startLevel>30</startLevel>
             </bundle>
             <bundle>
+              <groupId>org.apache.sling</groupId>
+              <artifactId>org.apache.sling.jcr.contentloader</artifactId>
+              <version>2.1.3.9999.1140321</version>
+              <startLevel>20</startLevel>
+            </bundle>
+            <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
               <version>0.10-SNAPSHOT</version>
