MYB-701 Use ProfileService to get the user profile, then look in it for email

--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -105,6 +105,12 @@
             <version>1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.nakamura</groupId>
+            <artifactId>org.sakaiproject.nakamura.profile</artifactId>
+            <version>0.11-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- OSGi -->
         <dependency>
