MYB-742 Nakamura's Solr setup reverted to Ian's ownership (reverse-merged from commit 3c4ca8c75d38f9654b1b124c8efb56ba589f3011)

--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -12,6 +12,7 @@
   <version>0.10-SNAPSHOT</version>
   <properties>
     <nakamura.version>0.11-SNAPSHOT</nakamura.version>
+    <ianproperty.version>1.0-SNAPSHOT</ianproperty.version>
   </properties>
   <packaging>jar</packaging>
   <build>
@@ -53,7 +54,7 @@
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.solr-myberkeley</artifactId>
-              <version>${nakamura.version}</version>
+              <version>${ianproperty.version}</version>
               <startLevel>15</startLevel>
             </bundle>
             <bundle>
