--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.base</artifactId>
   <packaging>pom</packaging>
-  <version>0.11-SNAPSHOT</version>
+  <version>1.0.1</version>
   <name>MyBerkeley</name>
   <url>http://ets.berkeley.edu/</url>
   <issueManagement>
