MYB-1048 Better to clean sling/config in the same place that handles other redeploy duties

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -60,6 +60,9 @@
                   <directory>${sakai3.home}/sling/felix</directory>
                 </fileset>
                 <fileset>
+                  <directory>${sakai3.home}/sling/config</directory>
+                </fileset>
+                <fileset>
                   <directory>${sakai3.home}/sling</directory>
 		          <includes>
 		            <include>org.apache.sling.launchpad.base.jar</include>
