--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
   <name>MyBerkeley CalDAV Connector bundle</name>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,18 +78,18 @@
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-          <version>1.0.0</version>
+          <version>1.1-SNAPSHOT</version>
       </dependency>
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.core</artifactId>
-          <version>1.1-20110830</version>
+          <version>1.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>org.sakaiproject.nakamura</groupId>
           <artifactId>org.sakaiproject.nakamura.user</artifactId>
-          <version>1.0.0</version>
+          <version>1.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
 
@@ -164,7 +164,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>1.0.0</version>
+      <version>1.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
