--- a/dynamiclist/pom.xml
+++ b/dynamiclist/pom.xml
@@ -2,13 +2,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
   <name>MyBerkeley Dynamic List bundle</name>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,7 +41,7 @@
     <dependency>
 	    <groupId>org.sakaiproject.nakamura</groupId>
 	    <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-	    <version>1.0.0</version>
+	    <version>1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
