--- a/migrators/pom.xml
+++ b/migrators/pom.xml
@@ -16,11 +16,11 @@
   <parent>
     <groupId>edu.berkeley.myberkeley</groupId>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
   </parent>
   <artifactId>edu.berkeley.myberkeley.migrators</artifactId>
   <packaging>bundle</packaging>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <name>MyBerkeley: Migrators</name>
   <description>Bundle of components that will convert old content to new schemas.</description>
   <build>
@@ -46,7 +46,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.core</artifactId>
-      <version>1.1-20110830</version>
+      <version>1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
