--- a/caldav/pom.xml
+++ b/caldav/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
   <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
   <name>MyBerkeley CalDAV Connector bundle</name>
-  <version>1.0.2-SNAPSHOT</version>
+  <version>1.0.2</version>
   <packaging>bundle</packaging>
   <build>
     <plugins>
@@ -136,7 +136,7 @@
     <dependency>
       <groupId>org.sakaiproject.nakamura</groupId>
       <artifactId>org.sakaiproject.nakamura.testutils</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <version>1.0.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
