--- a/notifications/pom.xml
+++ b/notifications/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>edu.berkeley.myberkeley.base</artifactId>
         <groupId>edu.berkeley.myberkeley</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.berkeley.myberkeley</groupId>
     <artifactId>edu.berkeley.myberkeley.notifications</artifactId>
     <name>MyBerkeley CalDAV-based Notifications bundle</name>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>bundle</packaging>
     <build>
         <plugins>
@@ -81,13 +81,13 @@
         <dependency>
             <groupId>org.sakaiproject.nakamura</groupId>
             <artifactId>org.sakaiproject.nakamura.search</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.sakaiproject.nakamura</groupId>
             <artifactId>org.sakaiproject.nakamura.messaging</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.sakaiproject.nakamura</groupId>
             <artifactId>org.sakaiproject.nakamura.profile</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>provided</scope>
         </dependency>
 
@@ -169,14 +169,14 @@
         <dependency>
             <groupId>edu.berkeley.myberkeley</groupId>
             <artifactId>edu.berkeley.myberkeley.caldav</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>edu.berkeley.myberkeley</groupId>
             <artifactId>edu.berkeley.myberkeley.dynamiclist</artifactId>
-            <version>1.0.2-SNAPSHOT</version>
+            <version>1.0.2</version>
             <scope>compile</scope>
         </dependency>
 
